fixed scrollbar issue in stylesheet, added promises to updateTransaction method in transactionListItem.js

--- a/css/public/style.css
+++ b/css/public/style.css
@@ -414,7 +414,6 @@ div.app-accounts span.utils {
 	background: white;
 	height: 100%;
 	width: 100%;
-	overflow-y: scroll;
 }
 .wrapper-show {
 	z-index: 101;
